fix wrap-guide color.

--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -10,7 +10,7 @@
 @syntax-background-color: @very-dark-gray;
 
 // Guide colors
-@syntax-wrap-guide-color: @dark-gray;
+@syntax-wrap-guide-color: @syntax-guide;
 @syntax-indent-guide-color: @syntax-guide;
 @syntax-invisible-character-color: @syntax-guide;
 
